--- a/Hana/Python/Python 感想003.org
+++ b/Hana/Python/Python 感想003.org
@@ -1,8 +1,7 @@
 #+TITLE: Python 3.7 带来的 Bug
 #+DATE: <2018-08-15 Wed>
 #+AUTHOR: Nasy
-#+TAGS: 花, flower, hana, 随笔, essay, python
-#+CATEGORIES: Flower, Essay
+#+TAGS: 花, hana, 🌸, 随笔, essay, python
 #+SUMMARY: 关键词 async 导致 Tensorflow 不能用。jedi 也有奇怪的问题。
 #+COMMENT: Python 感想 003
 #+HREF: python-impression-003
